# Custom-MCP-Servers

./: .gitignore  client.py  main.py  mathserver.py  pyproject.toml  requirements.txt
